Removed 'build' directory from Makefile

--- a/fastText/Makefile
+++ b/fastText/Makefile
@@ -4,11 +4,10 @@ libfasttext-wrapper.a: libfasttext-wrapper.o
 	ar rcs lib/$@ obj/*.o
 
 libfasttext-wrapper.o: fasttext-wrapper.cpp
-	if [ ! -d build ]; then mkdir build; fi
 	if [ ! -d obj ]; then mkdir obj; fi
 	g++ -c $(CPPFLAGS) $^ -o obj/$@
 
 .PHONY: clean
 
 clean:
-	rm -rf build obj
+	rm -rf obj
